--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 @import "./component/international-visionrs";
 @import "./component/registration-form";
 @import "./component/welcomeArea";
+@import "./component/career_form";
 
 @import "./layout/footer";
 @import "./layout/header";
@@ -18,8 +19,11 @@
 @import "./pages/home";
 @import "./pages/about";
 @import "./pages/pricing";
+@import "./pages/career";
 @import "./pages/program";
 @import "./pages/whylumina";
 @import "./pages/flm";
+@import "./pages/fee";
+
 @import "./pages/guidingMinds";
 @import "./pages/application";
