--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -40,17 +40,17 @@
 
 @mixin globalBtnOne{
     background: transparent;
-    color: $color-tertiary;
+    color: $color-primary;
     text-transform: capitalize;
     padding: 6px 16px;
-    border: 2px solid $color-tertiary;
+    border: 2px solid $color-primary;
     display: inline-block;
     text-decoration: none;
     transition: 0.4s;
-    font-weight: bold;
+    font-weight: normal;
     &:hover{
         text-decoration: none;
-        background: $color-tertiary;
+        background: $color-primary;
         color: $color-white;
     }
 }
@@ -87,8 +87,8 @@
 
 @mixin globalBtnThree{
     background: transparent;
-    color: $color-tertiary;
-    border: 1px solid $color-tertiary;
+    color: $color-text;
+    border: 1px solid $color-text;
     text-transform: capitalize;
     padding: 6px 16px;
     display: inline-block;
@@ -96,9 +96,9 @@
     transition: 0.4s;
     &:hover{
         text-decoration: none;
-        background: $color-tertiary;
-        color: $color-white;
-        border: 1px solid $color-tertiary;
+        background: $color-white;
+        color: $color-text;
+        border: 1px solid $color-white;
     }
 }
 
@@ -106,8 +106,8 @@
     @include globalBtnOne;
     border-radius: 3px;
     width: 20rem;
-    border-color: $color-white;
-    color: $color-white;
+    border-color: $color-primary;
+    color: $color-primary;
     @include respond (maxWidth575){
         width: auto;
     }
