--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -41,8 +41,13 @@ h6 {
     font-size: 3.6rem;
 text-transform: capitalize;
 margin-bottom: 1rem;
+color: $color-primary;
 margin-top: 0;
 line-height: 1.3;
+span{
+    color: $color-primary;
+    font: inherit;
+}
 @include respond (maxWidth1200){
     br{
         display: none;
