--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -72,7 +72,7 @@
     height: 5px;
     width: 100%;
     display: block;
-    background: $color-tertiary;
+    background: $color-primary;
     margin-bottom: 3rem;
 }
 
@@ -90,6 +90,9 @@
         width: 100%;
         object-position: bottom;
         object-fit: cover;
+        @include respond (maxWidth768){
+            height: 30rem;
+        }
     }
 
     &::before {
@@ -170,7 +173,7 @@ input:-webkit-autofill {
 }
 
 .internal-link {
-    color: $color-tertiary;
+    color: $color-primary;
     text-decoration: none;
     font-weight: bold;
 
