--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,40 +1,64 @@
-.home-page {
-    header {
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: 9;
-        width: 100%;
-        .container{
-            max-width: 100%;
-            padding-left: 4%;
-            padding-right: 4%;
-        }
-    }
-        .fixed-header{
-            @include respond (minWidth768){
-                .nav-list{
-                        flex-direction: row;
-                        padding: 0;
-                    }
-                    nav{
-                        padding: 0;
-                        align-items: center;
-                    }
-                }
-        }
-        nav{
-            @include respond (minWidth768){
-                padding-top: 30px;
-            }
-        }
-        .nav-list{
-            @include respond (minWidth768){
-                flex-direction: column-reverse;
-    padding: 30px 0 0 0;
-            }
-        }
-    }
+// .home-page {
+//     header {
+//         position: absolute;
+//         top: 0;
+//         left: 0;
+//         z-index: 9;
+//         width: 100%;
+//         padding: 0;
+//         .nav-button{
+//             background: $color-secondary!important;
+//         }
+//         .container{
+//             max-width: 100%;
+//             padding-left: 4%;
+//             padding-right: 4%;
+//         }
+//     }
+//         .fixed-header{
+//             @include respond (minWidth768){
+//                 .nav-list{
+//                         flex-direction: row;
+//                         padding: 0;
+//                     }
+//                     nav{
+//                         padding: 0;
+//                         align-items: center;
+//                     }
+//                 }
+//         }
+//         nav{
+//             @include respond (minWidth768){
+//                 padding-top: 0;
+//                 align-items: flex-start;
+//                 .right-side{
+//                     padding-top: 3rem;
+//                 }
+//                 .left-side{
+//                     position: relative;
+//                     img{
+//                         margin: 3rem 7rem 3rem 5rem;
+//                     }
+//                     &::before{
+//                         content: "";
+//                         background: $color-white;
+//                         position: absolute;
+//                         width: 100%;
+//                         height: 100%;
+//                         z-index: -1;
+//                         clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+//                     }
+//                 }
+//             }
+//         }
+//         .nav-list{
+//             @include respond (minWidth768){
+//                 flex-direction: column-reverse;
+//     padding: 0;
+//     align-items: flex-end;
+//             }
+//         }
+//     }
 
 header {
     padding: 6px 0;
@@ -50,11 +74,14 @@ header {
         background: $color-white;
         animation-duration: 0.6s;
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        .nav-button{
+            background: $color-primary!important;
+        }
     }
 
     nav {
         display: flex;
-        align-items: flex-start;
+        align-items: center;
         justify-content: space-between;
     }
 
@@ -120,7 +147,7 @@ header {
             flex-direction: column;
             justify-content: flex-start;
             align-items: flex-start;
-            background: #fff;
+            background: $color-white;
             height: 100vh;
             width: 25rem;
             transform: translateX(-100%);
@@ -173,13 +200,14 @@ header {
 
             .nav-button {
                 color: $color-white;
-                background: $color-button;
+                background: $color-primary;
                 padding: 6px 16px;
                 margin-left: 10px;
                 border-radius: 3px;
+                box-shadow: 0 3px darken($color-primary, $amount: 10);
                 transition: 0.4s;
                 &:hover{
-                    background: $color-primary;
+                    background: $color-secondary;
                 }
 
                 @include respond (maxWidth768) {
