--- a/sass/pages/_guidingMinds.scss
+++ b/sass/pages/_guidingMinds.scss
@@ -13,6 +13,7 @@
                 height: 100%;
                 object-fit: cover;
                 object-position: top;
+                background: #214d2517;
             }
         }
 
@@ -27,13 +28,13 @@
             position: absolute;
             right: -1rem;
             bottom: 3.5rem;
-            background: $color-tertiary;
+            background-image: $gradientOne;
             padding: 1rem;
             width: calc(100% - 3rem);
 
             &::after {
                 content: "";
-                background: darken($color-tertiary, $amount: 20);
+                background: darken($color-primary, $amount: 20);
                 position: absolute;
                 right: 4px;
                 bottom: -10px;
@@ -81,11 +82,9 @@
         text-align: center;
         border-radius: 140px 140px 80px 80px;
         height: 40rem;
-        background: radial-gradient(circle at 30% 30%, #ffffff, #ccc);
-        box-shadow: inset -10px -10px 20px rgba(255, 255, 255, 0.4),
-            inset 10px 10px 20px rgba(0, 0, 0, 0.1),
-            0 10px 20px rgba(0, 0, 0, 0.2);
-        border-top: 5rem solid $color-tertiary;
+        background: radial-gradient(circle at 30% 30%, #ffffff, rgba($color-primary, 0.2));
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+        border-top: 5rem solid $color-primary;
 
         .img-wrapper {
             width: 15rem;
@@ -98,17 +97,17 @@
                 object-position: top;
                 border-radius: 100%;
                 border: 4px solid #fff;
-                outline: 4px solid $color-tertiary;
+                outline: 4px solid $color-primary;
             }
         }
 
         .heading-tertiary {
             text-transform: uppercase;
             padding: 1rem 2rem;
-            border-top: 2px solid $color-tertiary;
+            border-top: 2px solid $color-primary;
             display: inline-block;
-            color: $color-tertiary;
-            border-bottom: 2px solid $color-tertiary;
+            color: $color-primary;
+            border-bottom: 2px solid $color-primary;
         }
         .designation{
             color: $color-text;
