--- a/sass/pages/_program.scss
+++ b/sass/pages/_program.scss
@@ -1,5 +1,5 @@
-.curriculum-activities{
-    background: $color-quaternary;
+.curriculum-activities {
+    background: $color-white;
 
     h2 {
         position: relative;
@@ -11,351 +11,423 @@
             transform: scale(0.75);
         }
     }
-    .card{
-        @include respond (minWidth768){
+
+    .card {
+        @include respond (minWidth768) {
             flex-direction: row;
-    align-items: center;
-    gap: 3rem;
+            align-items: center;
+            gap: 3rem;
         }
     }
-    .row{
+
+    .row {
         row-gap: 15px;
     }
-    .col-md-6{
-        &:not(:last-child){
-            .card{
+
+    .col-md-6 {
+        &:not(:last-child) {
+            .card {
                 margin-bottom: 2rem;
             }
         }
     }
-    .card{
+
+    .card {
         background: $color-white;
         padding: 15px;
         height: 100%;
-        .img-wrapper{
+
+        .img-wrapper {
             overflow: hidden;
             aspect-ratio: 1;
             border: 5px solid $color-tertiary;
             border-radius: 100%;
+
             @media screen and (min-width:575px) {
                 width: 28rem;
             }
-            img{
+
+            img {
                 width: 100%;
                 height: 100%;
                 border-radius: 100%;
                 background: $color-tertiary;
             }
         }
-        .card-content{
+
+        .card-content {
             text-align: center;
-            h4{
+
+            h4 {
                 margin-bottom: 0.7rem;
             }
         }
     }
 }
-.what-we-do{
-    h2{
+
+.what-we-do {
+    h2 {
         margin: 4rem 0;
 
     }
 }
-.our-facilities{
+
+.our-facilities {
     @media screen and (min-width:900px) {
-       background-image: linear-gradient(90deg, $color-quaternary 50%, $color-white 50%);
+        background-image: linear-gradient(90deg, darken($color-primary, 18) 50%, $color-white 50%);
     }
 }
-.our-facilities #awesome_tab{
-   display: grid;
-   grid-template-columns: 35% 65%;
-   @media screen and (max-width:900px) {
-       display: block;
-   }
+
+.our-facilities #awesome_tab {
+    display: grid;
+    grid-template-columns: 35% 65%;
+
+    @media screen and (max-width:900px) {
+        display: block;
+    }
 }
 
-.our-facilities #awesome_tab .tab_header{
-  @media screen and (min-width:900px) {
-   position: sticky;
-   top: 80px;
-   height: max-content;
-  }
+.our-facilities #awesome_tab .tab_header {
+    @media screen and (max-width:900px) {
+        
+        background: $color-primary;
+    }
+    @media screen and (min-width:900px) {
+        position: sticky;
+        top: 80px;
+        height: max-content;
+    }
 }
 
 .our-facilities #awesome_tab .tab_header .item {
-   border-bottom: 0.5px solid $color-white;
-   padding: 15px 10px 15px 40px;
-   border-radius: 4rem 0 0 4rem;
-   cursor: pointer;
-   display: block;
-   color: $color-text;
-   width: 100%;
-   transition: all 0.5s ease;
-   span{
-    display: inline-block;
-    border: 1px solid $color-primary;
-    color: $color-primary;
-    padding: 3px 12px;
-    border-radius: 40px;
-    font-size: 14px;
+    border-bottom: 0.5px solid $color-white;
+    padding: 15px 10px 15px 40px;
+    border-radius: 0;
+    cursor: pointer;
+    display: block;
+    color: $color-white;
+    width: 100%;
     transition: all 0.5s ease;
-   }
-   &:hover{
-    span{
-        background: $color-primary;
+    position: relative;
+
+    span {
+        display: inline-block;
+        border: 1px solid $color-white;
         color: $color-white;
+        padding: 3px 12px;
+        border-radius: 40px;
+        position: absolute;
+        right: 2rem;
+        font-size: 14px;
+        transition: all 0.5s ease;
     }
-   }
+
+    &:hover {
+        span {
+            background: $color-tertiary;
+            color: $color-white;
+            border-color: $color-tertiary;
+        }
+    }
 }
 
-.our-facilities .d-flex{
-   display: flex;
-   flex-direction: column;
-   gap: 5rem;
-   @include respond (maxWidth768){
-    display: block;
-   }
+.our-facilities .d-flex {
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+
+    @include respond (maxWidth768) {
+        display: block;
+    }
 }
 
 
 .our-facilities #awesome_tab .tab_header .item.active {
-   background:$color-white;
-   color:$color-text;
+    background: $color-white;
+    color: $color-text;
+    span{
+        border-color: $color-primary;
+        color: $color-primary;
+        &:hover{
+            background: $color-primary;
+            color: $color-white;
+        }
+    }
+    &:hover{
+        span{
+            background: $color-primary;
+            color: $color-white;
+        }
+    }
 }
 
 .our-facilities #awesome_tab .tab_header:after {
-   content: "";
-   display: table;
-   clear: both;
+    content: "";
+    display: table;
+    clear: both;
 }
 
-.our-facilities #awesome_tab .tab_container{
+.our-facilities #awesome_tab .tab_container {
     background: $color-white;
 }
 
 .our-facilities #awesome_tab .tab_container .container_item {
-   padding: 0 20px 20px 4rem;
-   display:none;
+    padding: 0 20px 20px 4rem;
+    display: none;
 }
 
-.our-facilities #awesome_tab .tab_container .container_item ol{
-    @include respond (minWidth992){
+.our-facilities #awesome_tab .tab_container .container_item ol {
+    @include respond (minWidth992) {
         display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 3rem;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 3rem;
     }
 }
 
-.our-facilities #awesome_tab .tab_container .container_item ol, 
-.our-facilities #awesome_tab .tab_container .container_item ul{
-   list-style: none;
-   padding-left: 0;
-   margin-bottom: 0;
+.our-facilities #awesome_tab .tab_container .container_item ol,
+.our-facilities #awesome_tab .tab_container .container_item ul {
+    list-style: none;
+    padding-left: 0;
+    margin-bottom: 0;
+    // display: none;
 }
-.our-facilities #awesome_tab .tab_container .container_item ol li:not(:last-child){
-   padding-bottom: 10px;
+
+.our-facilities #awesome_tab .tab_container .container_item .heading-primary {
+    // display: none;
+}
+
+.our-facilities #awesome_tab .tab_container .container_item ol li:not(:last-child) {
+    padding-bottom: 10px;
 }
 
 .our-facilities #awesome_tab .tab_container .container_item .img-wrapper {
-   overflow: hidden;
-   height: 200px;
-   margin-bottom: 30px;
+    overflow: hidden;
+    height: 200px;
+    margin-bottom: 30px;
 }
-.our-facilities #awesome_tab .tab_container .container_item .img-wrapper img{
-   height: 100%;
-   width: 100%;
-   object-fit: cover;
-   border-radius: 10px;
-   object-position: 100% 91%;
+
+.our-facilities #awesome_tab .tab_container .container_item .img-wrapper img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+    object-position: 100% 91%;
 }
+
 .our-facilities #awesome_tab .tab_container .container_item.active {
-   display:block;
+    display: block;
 }
 
 .modal {
-   display: none;
-   position: fixed;
-   top: 0;
-   left: 0;
-   width: 100%;
-   height: 100%;
-   background-color: rgba(0, 0, 0, 0.5);
-   justify-content: center;
-   align-items: center;
-   z-index: 1000;
- }
- 
- .modal-content {
-   background-color: white;
-   padding: 20px;
-   border-radius: 8px;
-   width: 400px;
-   text-align: center;
-   position: relative;
-   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
- }
- 
- .close {
-   position: absolute;
-   top: 10px;
-   right: 15px;
-   font-size: 20px;
-   font-weight: bold;
-   cursor: pointer;
- }
- .curriculum{
-    
-   .img-wrapper{
-       height: 33rem;
-       position: relative;
-       &::before{
-           content: "";
-           background-image: linear-gradient(0deg, #000000, transparent);
-           position: absolute;
-           bottom: 0;
-           left: 0;
-           width: 100%;
-           height: 100%;
-       }
-       img{
-           height: 100%;
-           width: 100%;
-       }
-       .content{
-           position: absolute;
-           bottom: 0;
-           left: 0;
-           padding: 0.5rem 1rem 1rem 2rem;
-           display: inline-block;
-           border-top: 4px solid $color-white;
-           h4{
-               color: $color-white;
-               font-weight: normal;
-               text-transform: uppercase;
-               font-size: 30px;
-               line-height: 1.5;
-               margin-bottom: 0;
-           }
-           span{
-               color: $color-white;
-           }
-       }
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
 
-   }
- }
- .container.lumina-hub {
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    width: 400px;
+    text-align: center;
+    position: relative;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.curriculum {
+
+    .img-wrapper {
+        height: 33rem;
+        position: relative;
+
+        &::before {
+            content: "";
+            background-image: linear-gradient(0deg, #000000, transparent);
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        img {
+            height: 100%;
+            width: 100%;
+        }
+
+        .content {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            padding: 0.5rem 1rem 1rem 2rem;
+            display: inline-block;
+            border-top: 4px solid $color-white;
+
+            h4 {
+                color: $color-white;
+                font-weight: normal;
+                text-transform: uppercase;
+                font-size: 30px;
+                line-height: 1.5;
+                margin-bottom: 0;
+            }
+
+            span {
+                color: $color-white;
+            }
+        }
+
+    }
+}
+
+.container.lumina-hub {
     padding: 5rem 12rem 5rem 12rem;
     text-align: center;
-    .link-wrapper{
+
+    .link-wrapper {
         text-align: center;
         padding-top: 3rem;
-        a{
+
+        a {
             @include globalBtnOne();
         }
 
     }
-    @include respond (maxWidth768){
+
+    @include respond (maxWidth768) {
         padding: 3rem 0;
     }
 }
-.contact-venue{
-    background: $color-primary;
+
+.contact-venue {
+    background-image: $gradientOne;
     padding: 3rem;
-    &__list{
+
+    &__list {
         list-style: none;
     }
-    &__list-item{
+
+    &__list-item {
         display: flex;
-    align-items: flex-start;
-    gap: 2.5rem;
-    &:not(:last-child){
-        margin-bottom: 2rem;}
-    }
-    &__list-icon{
-        
-        i{
-            color: #ffffff;
-    font-size: 2rem;
+        align-items: flex-start;
+        gap: 2.5rem;
+
+        &:not(:last-child) {
+            margin-bottom: 2rem;
         }
     }
-    &__list-text{
- color: $color-white;
- a{
-    color: $color-white;
-    font-weight: 500;
+
+    &__list-icon {
+
+        i {
+            color: #ffffff;
+            font-size: 2rem;
+        }
+    }
+
+    &__list-text {
+        color: $color-white;
+
+        a {
+            color: $color-white;
+            font-weight: 500;
+        }
+    }
 }
-    }   
-}
-.international-committee{
-    .international-grid{
+
+.international-committee {
+    .international-grid {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 3rem;
-        @include respond(maxWidth768){
+
+        @include respond(maxWidth768) {
             grid-template-columns: repeat(1, 1fr);
         }
-        .international-grid-item{
-            .committee-wrapper{
+
+        .international-grid-item {
+            .committee-wrapper {
                 background: $color-white;
                 height: 100%;
-border-radius: 1rem;
-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-.popup-img-wrapper{
-    padding-top: 3rem;
-    position: relative;
-    img{
-        display: block;
-        width: 23.6rem;
-        height: 23.6rem;
-        aspect-ratio: 1;
-        border-radius: 100%;
-        margin: 0 auto 1rem auto;
-        position: relative;
-        z-index: 1;
-        border: 4px solid #28aae4;
-        object-position: top;
-outline: 4px solid #ffffff;
-    }
-    &::before{
-        content: "";
-        background: $color-button;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        border-radius: 1rem;
-        clip-path: polygon(0 0, 100% 0%, 100% 30%, 50% 80%, 0 30%);
-        z-index: 0;
-    }
-    &::after{
-        content: "";
-        background: url(https://dignityeducation.org/fellowship/image/bg-01.jpg);
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        border-radius: 1rem;
-        left: 0;
-        clip-path: polygon(0 0, 100% 0%, 100% 30%, 50% 80%, 0 30%);
-        z-index: 0;
-        background-size: cover;
-        background-position: bottom;
-        mix-blend-mode: multiply;
-opacity: 0.2;
-    }
-}
-                .content-wrapper{
+                border-radius: 1rem;
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+                .popup-img-wrapper {
+                    padding-top: 3rem;
+                    position: relative;
+
+                    img {
+                        display: block;
+                        width: 23.6rem;
+                        height: 23.6rem;
+                        aspect-ratio: 1;
+                        border-radius: 100%;
+                        margin: 0 auto 1rem auto;
+                        position: relative;
+                        z-index: 1;
+                        border: 4px solid #28aae4;
+                        object-position: top;
+                        outline: 4px solid #ffffff;
+                    }
+
+                    &::before {
+                        content: "";
+                        background: $color-secondary;
+                        position: absolute;
+                        width: 100%;
+                        height: 100%;
+                        top: 0;
+                        left: 0;
+                        border-radius: 1rem;
+                        clip-path: polygon(0 0, 100% 0%, 100% 30%, 50% 80%, 0 30%);
+                        z-index: 0;
+                    }
+
+                    &::after {
+                        content: "";
+                        background: url(https://dignityeducation.org/fellowship/image/bg-01.jpg);
+                        position: absolute;
+                        width: 100%;
+                        height: 100%;
+                        top: 0;
+                        border-radius: 1rem;
+                        left: 0;
+                        clip-path: polygon(0 0, 100% 0%, 100% 30%, 50% 80%, 0 30%);
+                        z-index: 0;
+                        background-size: cover;
+                        background-position: bottom;
+                        mix-blend-mode: multiply;
+                        opacity: 0.2;
+                    }
+                }
+
+                .content-wrapper {
                     padding: 0 2rem 2rem;
-                    .heading-tertiary{
+
+                    .heading-tertiary {
                         font-size: 2.4rem;
-                        color: $color-button;
+                        color: $color-secondary;
                         font-weight: 400;
                         margin: 0 auto 1rem;
                     }
-                    .content-para{
 
-                    }
+                    .content-para {}
                 }
             }
         }
